--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -8,11 +8,30 @@
 </head>
 
 <body>
+
 <div id="background">
- 	<div id="text">
- 		 &lt; Usage:   #openqtkiosk [URL]   &gt;
- 	</div>
+	<samp>
+ 		 Usage: openqtkiosk [options] source
+ 		 <figure>
+    		<figcaption>Options:</figcaption>
+ 		 	<ul>
+ 		 		<li> -?, -h, --help <span class="tab">Display this help.</span></li>
+ 		 		<li> -v, --version <span class="tab">&nbsp;Displays version information.</span></li>
+ 		 		<li> -k, --keyboard <span class="tab">Activate virtual keyboard.</span></li>
+ 		 		<li> -c, --cache <span class="tab">&nbsp;&nbsp;&nbsp;Enable cache.</span></li>
+ 		 	</ul>
+		</figure> 
+		<figure>
+    		<figcaption>Arguments:</figcaption>
+ 		 	<ul>
+ 		 		<li> source <span class="tab2">URL or filename.</span></li>
+ 		 	</ul>
+		</figure>  
+ 	</samp>
 	 
 </div>
+ 	
+
+
 </body>
 </html>
